[gd_scene load_steps=4 format=2]

[ext_resource path="res://NotificationManager.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 21
font_data = ExtResource( 2 )

[node name="NotificationManager" type="Node2D"]
script = ExtResource( 1 )

[node name="BreakNotificationText" type="Label" parent="."]
visible = false
margin_left = 141.0
margin_top = 184.7
margin_right = 419.0
margin_bottom = 276.7
rect_pivot_offset = Vector2( 0, 270 )
custom_fonts/font = SubResource( 1 )
text = "penus inserter maximus repaired!"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="RepairNotificationText" type="Label" parent="."]
visible = false
margin_left = 132.0
margin_top = 262.0
margin_right = 419.0
margin_bottom = 365.0
rect_pivot_offset = Vector2( 0, 270 )
custom_fonts/font = SubResource( 1 )
text = "penus inserter maximus repaired!"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="UpgradeNotificationText" type="Label" parent="."]
visible = false
margin_left = 153.0
margin_top = 108.0
margin_right = 406.0
margin_bottom = 182.0
rect_pivot_offset = Vector2( 0, 270 )
custom_fonts/font = SubResource( 1 )
text = "upgrade!"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="BreakTween" type="Tween" parent="."]

[node name="RepairTween" type="Tween" parent="."]

[node name="UpgradeTween" type="Tween" parent="."]

[node name="BreakTimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="RepairTimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="UpgradeTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="tween_all_completed" from="BreakTween" to="." method="_on_BreakTween_tween_all_completed"]
[connection signal="tween_all_completed" from="RepairTween" to="." method="_on_RepairTween_tween_all_completed"]
[connection signal="tween_all_completed" from="UpgradeTween" to="." method="_on_UpgradeTween_tween_all_completed"]
[connection signal="timeout" from="BreakTimer" to="." method="_on_BreakTimer_timeout"]
[connection signal="timeout" from="RepairTimer" to="." method="_on_RepairTimer_timeout"]
[connection signal="timeout" from="UpgradeTimer" to="." method="_on_UpgradeTimer_timeout"]
